--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@peregrine/webserver",
-  "version": "0.1.1",
-  "description": "",
+  "version": "0.1.2",
+  "description": "[EXPERIMENTAL] A wrapper for express",
   "main": "build/main/index.js",
   "types": "build/main/index.d.ts",
   "scripts": {
