--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "build/main/index.d.ts",
   "scripts": {
     "build": "tsc -b -v",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive build/tests"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,10 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/node": "^10.12.12",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "mocha": "^5.2.0",
+    "chai": "^4.2.0",
+    "@types/mocha": "^5.2.5",
+    "@types/chai": "^4.1.7"
   }
 }
