--- a/package.json
+++ b/package.json
@@ -22,12 +22,10 @@
   },
   "homepage": "https://github.com/Peregrine-node/webserver#readme",
   "dependencies": {
-    "@peregrine/exceptions": "^0.1.2",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "@peregrine/exceptions": "^0.2.0",
+    "@peregrine/filesystem": "^0.4.0"
   },
   "devDependencies": {
-    "@types/express": "^4.16.0",
     "@types/node": "^10.12.12",
     "typescript": "^3.2.2",
     "mocha": "^5.2.0",
