--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@peregrine/filesystem": "^0.4.0"
   },
   "devDependencies": {
-    "@types/node": "^10.12.12",
-    "typescript": "^3.2.2",
-    "mocha": "^5.2.0",
+    "@testdeck/mocha": "0.0.6",
+    "@types/chai": "^4.2.3",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.7.8",
     "chai": "^4.2.0",
-    "@types/mocha": "^5.2.5",
-    "@types/chai": "^4.1.7"
+    "mocha": "^6.2.0",
+    "typescript": "^3.6.3"
   }
 }
