--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^12.7.8",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
+    "tslint": "^5.20.0",
     "typescript": "^3.6.3"
   }
 }
