--- a/.npmignore
+++ b/.npmignore
@@ -60,19 +60,14 @@ typings/
 # next.js build output
 .next
 
-# Source files
-src/
-tsconfig.json
-
-# Tests
-build/tests/
-
 # VSCode
 .vscode/
-*.code-workspace
 
-# CI
-.travis.yml
-
-# Other
-package-lock.json
+# Code not used for the exported library
+src/
+lib/
+example/
+.github/
+build/example/
+build/src/test/
+build/lib/test/
